Performance optimizations of SAT Solving/AETG